src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_JASON__c</fullName>
        <label>Country JSON Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_District__c</fullName>
        <label>Total District</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_States__c</fullName>
        <label>Total States</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Total_States__c</columns>
        <columns>Total_District__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>